# HOME_AI_OS

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py  script.py.mako
alembic/versions/: 2026_03_28_fd993f06b4a4_initial_schema.py
docs/: ARCHITECTURE.md  GETTING_STARTED.md  GLOSSARY.md  MVP.md  README.md  ROADMAP.md  roadmap-interactive.html
scripts/: init_db.sql
src/: __init__.py
src/core/: __init__.py  config.py  database.py  logging.py  models.py  security.py  storage.py
src/core/ai/: __init__.py  router.py  schemas.py
src/core/ai/providers/: __init__.py  claude.py  ollama.py
src/creative/: __init__.py
src/dev/: __init__.py
src/documents/: __init__.py
src/documents/extractors/: __init__.py
src/intake/: __init__.py
src/intake/adapters/: __init__.py  telegram.py
src/knowledge/: __init__.py
src/media/: __init__.py
src/media/processors/: __init__.py
src/medical/: __init__.py
src/operations/: __init__.py
src/registry/: __init__.py
src/reports/: __init__.py
src/search/: __init__.py
src/tasks/: __init__.py
src/web/: __init__.py  app.py
src/web/routes/: __init__.py  health.py
src/web/templates/: base.html  index.html
tests/: conftest.py
tests/unit/: test_health.py
workers/: __init__.py  ai_tasks.py  celery_app.py  scheduled_tasks.py
